# WxrayTube

./: CMakeLists.txt  GNUmakefile  WxrayTube.cc  WxrayTube.cfg  init.mac  init_vis.mac  launchTheSim.sh  mergeHistos.cc  run.mac  run_Wth.sh  simulate.mac  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  StoreData.hh  utils.hh
src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  StoreData.cc  utils.cc
